# label-studio-ml-backend

./: .gitignore  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py
label_studio_ml/examples/flair/: requirements.txt
label_studio_ml/examples/gliner/: requirements.txt
label_studio_ml/examples/huggingface_llm/: requirements.txt
label_studio_ml/examples/nemo_asr/: requirements.txt
label_studio_ml/examples/segment_anything_model/: requirements.txt
label_studio_ml/examples/sklearn_text_classifier/: requirements.txt
label_studio_ml/examples/timeseries_segmenter/: requirements-test.txt  requirements.txt
label_studio_ml/examples/watsonx_llm/: requirements.txt
nachet-proxy/: _wsgi.py  model.py  seed_detector.py
